Started converting theme into bluetheme

--- a/cienciasalud/bluetheme/static/theme.html
+++ b/cienciasalud/bluetheme/static/theme.html
@@ -21,9 +21,11 @@ Description: A three-column, fixed-width template ideal for 1024x768 resolution.
 </head>
 <body>
 <div id="header">
-	<div id="logo">
-		<h1><a href="#">Baseline</a></h1>
-		<h2><a href="http://www.freecsstemplates.org/">By Free CSS Templates</a></h2>
+    <div id="logo">
+        <a href="">
+                <img width="308" height="66" title="" alt="" src="images/logo.png"></a>
+		<!--h1><a href="#">Baseline</a></h1>
+		<h2><a href="http://www.freecsstemplates.org/">By Free CSS Templates</a></h2-->
 	</div>
 	<div id="search">
 		<form method="get" action="">
@@ -45,8 +47,8 @@ Description: A three-column, fixed-width template ideal for 1024x768 resolution.
 </div>
 <div id="page">
 	<div id="content">
-		<div id="feature" class="box-orange">
-			<h2 class="section"><b>Feature Article</b></h2>
+		<div id="feature" class="box-blue">
+			<h2 class="section"><b>Artículos recientes</b></h2>
 			<div class="content"> <img src="images/img12.jpg" alt="" width="160" height="160" class="right" />
 				<h1>Welcome to Our Website!</h1>
 				<p class="byline"><small>By John Doe</small></p>
@@ -54,7 +56,7 @@ Description: A three-column, fixed-width template ideal for 1024x768 resolution.
 				<p><a href="#"><strong>Get more free CSS templates&hellip;</strong></a></p>
 			</div>
 		</div>
-		<div class="two-cols">
+		<div id="contents" class="two-cols">
 			<div class="box-blue col-one">
 				<h2 class="section"><b>Lorem Ipsum Dolor</b></h2>
 				<div class="content">
@@ -62,7 +64,7 @@ Description: A three-column, fixed-width template ideal for 1024x768 resolution.
 					<p> Augue praesent a lacus at urna congue rutrum. Dolor dictum integer nisl risus. <a href="#">Read more&hellip;</a></p>
 				</div>
 			</div>
-			<div class="box-pink col-two">
+			<div class="box-blue col-two">
 				<h2 class="section"><b>Pellentesque Quis</b></h2>
 				<div class="content">
 					<ul class="list">
@@ -84,8 +86,8 @@ Description: A three-column, fixed-width template ideal for 1024x768 resolution.
 	</div>
 	<div id="sidebar" class="two-cols">
 		<div class="col-one">
-			<div class="box-blue">
-				<h2 class="section"><b>Categories</b></h2>
+			<div id="colone" class="box-blue">
+				<h2 class="section"><b>Categorías</b></h2>
 				<div class="content">
 					<ul>
 						<li>
@@ -129,8 +131,8 @@ Description: A three-column, fixed-width template ideal for 1024x768 resolution.
 			</div>
 		</div>
 		<div class="col-two">
-			<div class="box-pink">
-				<h2 class="section"><b>Sponsors</b></h2>
+			<div id="col2" class="box-blue">
+				<h2 class="section"><b>Publicidad</b></h2>
 				<div class="content"><a href="#"><img src="images/img20.jpg" alt="" width="160" height="600" /></a></div>
 			</div>
 		</div>
