Added space for leaderboard before header

--- a/cienciasalud/bluetheme/static/theme.html
+++ b/cienciasalud/bluetheme/static/theme.html
@@ -20,6 +20,8 @@ Description: A three-column, fixed-width template ideal for 1024x768 resolution.
 <link href="styles.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
+    <div id="leaderboard">
+    </div>
 <div id="header">
     <div id="logo">
         <a href="">
@@ -86,9 +88,9 @@ Description: A three-column, fixed-width template ideal for 1024x768 resolution.
 	</div>
 	<div id="sidebar" class="two-cols">
 		<div class="col-one">
-			<div id="colone" class="box-blue">
+			<div class="box-blue">
 				<h2 class="section"><b>Categorías</b></h2>
-				<div class="content">
+				<div id="colone" class="content">
 					<ul>
 						<li>
 							<h3><a href="#">Pede vel arcu</a></h3>
