--- a/cienciasalud/bluetheme/static/theme.html
+++ b/cienciasalud/bluetheme/static/theme.html
@@ -21,6 +21,7 @@ Description: A three-column, fixed-width template ideal for 1024x768 resolution.
 </head>
 <body>
     <div id="leaderboard">
+        <img src="images/leaderboard_728x90.gif" />
     </div>
 <div id="header">
     <div id="logo">
