Three theme templates: home.html, listing.html, item.html; Uninstall profile; CSS & theme rules

--- a/cienciasalud/bluetheme/static/home.html
+++ b/cienciasalud/bluetheme/static/home.html
@@ -21,7 +21,8 @@ Description: A three-column, fixed-width template ideal for 1024x768 resolution.
 </head>
 <body>
     <div id="leaderboard">
-        <img src="images/leaderboard_728x90.gif" />
+        <iframe id='a0d5ed6a' name='a0d5ed6a' src='http://delivery.pubads.biz/www/delivery/afr.php?zoneid=12&amp;cb=INSERT_RANDOM_NUMBER_HERE' frameborder='0' scrolling='no' width='728' height='90'></iframe>
+        <!--img src="images/leaderboard_728x90.gif" /-->
     </div>
 <div id="header">
     <div id="logo">
@@ -38,15 +39,17 @@ Description: A three-column, fixed-width template ideal for 1024x768 resolution.
 			</fieldset>
 		</form>
 	</div>
-</div>
-<div id="menu">
-	<ul>
-		<li class="active"><a href="#"><b>Home</b></a></li>
-		<li><a href="#"><b>Blogs</b></a></li>
-		<li><a href="#"><b>Forums</b></a></li>
-		<li><a href="#"><b>About</b></a></li>
-		<li><a href="#"><b>Contact</b></a></li>
-	</ul>
+    <div id="menu">
+        <ul>
+            <li class="active"><a href="#"><b>Home</b></a></li>
+            <li><a href="#"><b>Blogs</b></a></li>
+            <li><a href="#"><b>Forums</b></a></li>
+            <li><a href="#"><b>About</b></a></li>
+            <li><a href="#"><b>Contact</b></a></li>
+        </ul>
+    </div>
+    <div id="crumbs">
+    </div>
 </div>
 <div id="page">
 	<div id="content">
@@ -136,7 +139,10 @@ Description: A three-column, fixed-width template ideal for 1024x768 resolution.
 		<div class="col-two">
 			<div id="col2" class="box-blue">
 				<h2 class="section"><b>Publicidad</b></h2>
-				<div class="content"><a href="#"><img src="images/img20.jpg" alt="" width="160" height="600" /></a></div>
+				<div class="content"><!--a href="#"-->
+                    <iframe id='ad1c52f0' name='ad1c52f0' src='http://delivery.pubads.biz/www/delivery/afr.php?zoneid=21&amp;cb=INSERT_RANDOM_NUMBER_HERE' frameborder='0' scrolling='no' width='160' height='600'></iframe>
+                    <!--img src="images/img20.jpg" alt="" width="160" height="600" /></a-->
+                </div>
 			</div>
 		</div>
 	</div>
