Added date portlet to themes

--- a/cienciasalud/bluetheme/static/listing.html
+++ b/cienciasalud/bluetheme/static/listing.html
@@ -27,9 +27,8 @@ Description: A three-column, fixed-width template ideal for 1024x768 resolution.
         <div id="header">
             <div id="logo">
                 <a href="">
-                    <img width="308" height="66" title="" alt="" src="images/logo.png" /></a>
-                <!--h1><a href="#">Baseline</a></h1>
-            <h2><a href="http://www.freecsstemplates.org/">By Free CSS Templates</a></h2-->
+                    <img width="308" height="66" title="" alt="" src="images/logo.png" />
+                </a>
             </div>
             <div id="search">
                 <form method="get" action="">
@@ -50,8 +49,11 @@ Description: A three-column, fixed-width template ideal for 1024x768 resolution.
             </div>
             <div id="crumbs">
             </div>
+            <div id="date">
+                <span class="portlet">Date portlet here</span>
+            </div>
         </div>
-        <div id="page">
+        <div id="page" class="listing">
             <div id="content" class="wide">
                 <div class="box-blue col-one">
                     <h2 id="title" class="section"><b>Lorem Ipsum Dolor</b></h2>
