--- a/cienciasalud/bluetheme/static/home.html
+++ b/cienciasalud/bluetheme/static/home.html
@@ -12,145 +12,148 @@ Description: A three-column, fixed-width template ideal for 1024x768 resolution.
 
 -->
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<title>Baseline by Free Css Templates</title>
-<meta name="keywords" content="" />
-<meta name="description" content="" />
-<link href="styles.css" rel="stylesheet" type="text/css" />
-</head>
-<body>
-    <div id="leaderboard">
-        <iframe id='a0d5ed6a' name='a0d5ed6a' src='http://delivery.pubads.biz/www/delivery/afr.php?zoneid=12&amp;cb=INSERT_RANDOM_NUMBER_HERE' frameborder='0' scrolling='no' width='728' height='90'></iframe>
-        <!--img src="images/leaderboard_728x90.gif" /-->
-    </div>
-<div id="header">
-    <div id="logo">
-        <a href="">
-                <img width="308" height="66" title="" alt="" src="images/logo.png"></a>
-		<!--h1><a href="#">Baseline</a></h1>
-		<h2><a href="http://www.freecsstemplates.org/">By Free CSS Templates</a></h2-->
-	</div>
-	<div id="search">
-		<form method="get" action="">
-			<fieldset>
-			<input id="searchinput" type="text" name="searchinput" value="" />
-			<input id="searchsubmit" type="submit" value="Search" />
-			</fieldset>
-		</form>
-	</div>
-    <div id="menu">
-        <ul>
-            <li class="active"><a href="#"><b>Home</b></a></li>
-            <li><a href="#"><b>Blogs</b></a></li>
-            <li><a href="#"><b>Forums</b></a></li>
-            <li><a href="#"><b>About</b></a></li>
-            <li><a href="#"><b>Contact</b></a></li>
-        </ul>
-    </div>
-    <div id="crumbs">
-    </div>
-</div>
-<div id="page">
-	<div id="content">
-		<div id="feature" class="box-blue">
-			<h2 class="section"><b>Artículos recientes</b></h2>
-			<div class="content"> <img src="images/img12.jpg" alt="" width="160" height="160" class="right" />
-				<h1>Welcome to Our Website!</h1>
-				<p class="byline"><small>By John Doe</small></p>
-				<p>Baseline is a free template from Free CSS Templates released under a Creative Commons Attribution 2.5 License. The photo is from PDPhoto.org. You"re free to use it for both commercial or personal use. I only ask that you link back to my site in some way. Enjoy :)</p>
-				<p><a href="#"><strong>Get more free CSS templates&hellip;</strong></a></p>
-			</div>
-		</div>
-		<div id="contents" class="two-cols">
-			<div class="box-blue col-one">
-				<h2 class="section"><b>Lorem Ipsum Dolor</b></h2>
-				<div class="content">
-					<p>Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum. Dolor dictum integer nisl risus, sagittis convallis, rutrum id, congue, and nibh lorem ipsum dolor sit amet.</p>
-					<p> Augue praesent a lacus at urna congue rutrum. Dolor dictum integer nisl risus. <a href="#">Read more&hellip;</a></p>
-				</div>
-			</div>
-			<div class="box-blue col-two">
-				<h2 class="section"><b>Pellentesque Quis</b></h2>
-				<div class="content">
-					<ul class="list">
-						<li><a href="#">Ut semper vestibulum est</a></li>
-						<li><a href="#">Vestibulum luctus venenatis</a></li>
-						<li><a href="#">Integer rutrum nisl in mi</a></li>
-						<li><a href="#">Vestibulum luctus venenatis</a></li>
-						<li><a href="#">Etiam malesuada rutrum enim</a></li>
-						<li><a href="#">Aenean elementum facilisis</a></li>
-						<li><a href="#">Ut tincidunt elit vitae augue</a></li>
-						<li><a href="#">Integer rutrum nisl in mi</a></li>
-						<li><a href="#">Etiam malesuada rutrum enim</a></li>
-						<li><a href="#">Aenean elementum facilisis</a></li>
-						<li><a href="#">Sed quis odio sagittis leo</a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div id="sidebar" class="two-cols">
-		<div class="col-one">
-			<div class="box-blue">
-				<h2 class="section"><b>Categorías</b></h2>
-				<div id="colone" class="content">
-					<ul>
-						<li>
-							<h3><a href="#">Pede vel arcu</a></h3>
-							<ul>
-								<li><a href="#">Aliquet pretium</a></li>
-								<li><a href="#">Pellentesque qui</a></li>
-								<li><a href="#">Integer sit amet</a></li>
-								<li><a href="#">Elit non gravida</a></li>
-								<li><a href="#">Blandit </a><a href="#">lorem ipsum</a></li>
-								<li><a href="#">Dolor sit amet</a></li>
-							</ul>
-						</li>
-						<li>
-							<h3><a href="#">Adipiscing elit</a></h3>
-							<ul>
-								<li><a href="#">Nec erat sit amet</a></li>
-								<li><a href="#">Pellentesque congue</a></li>
-								<li><a href="#">Cras vitae metus</a></li>
-								<li><a href="#">Risus pellentesque</a></li>
-								<li><a href="#">Maecenas vitae orci</a></li>
-								<li><a href="#">Vitae tellus feugiat</a></li>
-								<li><a href="#">Etiam ac tortor eu</a></li>
-							</ul>
-						</li>
-						<li>
-							<h3><a href="#">Metus euismod</a></h3>
-							<ul>
-								<li><a href="#">Duis non ante in</a></li>
-								<li><a href="#">Commodo euismod</a></li>
-								<li><a href="#">Nec erat sit amet</a></li>
-								<li><a href="#">Pellentesque congue</a></li>
-								<li><a href="#">Risus pellentesque</a></li>
-								<li><a href="#">Maecenas vitae orci</a></li>
-								<li><a href="#">Vitae tellus eleifend</a></li>
-								<li><a href="#">Etiam ac tortor eu</a></li>
-							</ul>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</div>
-		<div class="col-two">
-			<div id="col2" class="box-blue">
-				<h2 class="section"><b>Publicidad</b></h2>
-				<div class="content"><!--a href="#"-->
-                    <iframe id='ad1c52f0' name='ad1c52f0' src='http://delivery.pubads.biz/www/delivery/afr.php?zoneid=21&amp;cb=INSERT_RANDOM_NUMBER_HERE' frameborder='0' scrolling='no' width='160' height='600'></iframe>
-                    <!--img src="images/img20.jpg" alt="" width="160" height="600" /></a-->
+    <head>
+        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+        <title>Baseline by Free Css Templates</title>
+        <meta name="keywords" content="" />
+        <meta name="description" content="" />
+        <link href="styles.css" rel="stylesheet" type="text/css" />
+    </head>
+    <body>
+        <div id="leaderboard">
+            <iframe id='a0d5ed6a' name='a0d5ed6a' src='http://delivery.pubads.biz/www/delivery/afr.php?zoneid=12&amp;cb=INSERT_RANDOM_NUMBER_HERE' frameborder='0' scrolling='no' width='728' height='90'></iframe>
+            <!--img src="images/leaderboard_728x90.gif" /-->
+        </div>
+        <div id="header">
+            <div id="logo">
+                <a href="">
+                    <img width="308" height="66" title="" alt="" src="images/logo.png"></a>
+                <!--h1><a href="#">Baseline</a></h1>
+            <h2><a href="http://www.freecsstemplates.org/">By Free CSS Templates</a></h2-->
+            </div>
+            <div id="search">
+                <form method="get" action="">
+                    <fieldset>
+                        <input id="searchinput" type="text" name="searchinput" value="" />
+                        <input id="searchsubmit" type="submit" value="Search" />
+                    </fieldset>
+                </form>
+            </div>
+            <div id="menu">
+                <ul>
+                    <li class="active"><a href="#"><b>Home</b></a></li>
+                    <li><a href="#"><b>Blogs</b></a></li>
+                    <li><a href="#"><b>Forums</b></a></li>
+                    <li><a href="#"><b>About</b></a></li>
+                    <li><a href="#"><b>Contact</b></a></li>
+                </ul>
+            </div>
+            <div id="crumbs">
+            </div>
+            <div id="date">
+                <span class="portlet">Date portlet here</span>
+            </div>
+        </div>
+        <div id="page">
+            <div id="content">
+                <div id="feature" class="box-blue">
+                    <h2 class="section"><b>Artículos recientes</b></h2>
+                    <div class="content"> <img src="images/img12.jpg" alt="" width="160" height="160" class="right" />
+                        <h1>Welcome to Our Website!</h1>
+                        <p class="byline"><small>By John Doe</small></p>
+                        <p>Baseline is a free template from Free CSS Templates released under a Creative Commons Attribution 2.5 License. The photo is from PDPhoto.org. You"re free to use it for both commercial or personal use. I only ask that you link back to my site in some way. Enjoy :)</p>
+                        <p><a href="#"><strong>Get more free CSS templates&hellip;</strong></a></p>
+                    </div>
                 </div>
-			</div>
-		</div>
-	</div>
-	<div style="clear: both;">&nbsp;</div>
-</div>
-<div id="footer">
-	<p id="legal">Copyright &copy; 2007 Simpletex. All Rights Reserved | Designed by <a href="http://www.freecsstemplates.org/">Free CSS Templates</a></p>
-	<p id="links"><a href="#">Privacy Policy</a> | <a href="#">Terms of Use</a> | <a href="http://validator.w3.org/check/referer" title="This page validates as XHTML 1.0 Transitional"><abbr title="eXtensible HyperText Markup Language">XHTML</abbr></a> | <a href="http://jigsaw.w3.org/css-validator/check/referer" title="This page validates as CSS"><abbr title="Cascading Style Sheets">CSS</abbr></a></p>
-</div>
-</body>
+                <div id="contents" class="two-cols">
+                    <div class="box-blue col-one">
+                        <h2 class="section"><b>Lorem Ipsum Dolor</b></h2>
+                        <div class="content">
+                            <p>Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum. Dolor dictum integer nisl risus, sagittis convallis, rutrum id, congue, and nibh lorem ipsum dolor sit amet.</p>
+                            <p> Augue praesent a lacus at urna congue rutrum. Dolor dictum integer nisl risus. <a href="#">Read more&hellip;</a></p>
+                        </div>
+                    </div>
+                    <div class="box-blue col-two">
+                        <h2 class="section"><b>Pellentesque Quis</b></h2>
+                        <div class="content">
+                            <ul class="list">
+                                <li><a href="#">Ut semper vestibulum est</a></li>
+                                <li><a href="#">Vestibulum luctus venenatis</a></li>
+                                <li><a href="#">Integer rutrum nisl in mi</a></li>
+                                <li><a href="#">Vestibulum luctus venenatis</a></li>
+                                <li><a href="#">Etiam malesuada rutrum enim</a></li>
+                                <li><a href="#">Aenean elementum facilisis</a></li>
+                                <li><a href="#">Ut tincidunt elit vitae augue</a></li>
+                                <li><a href="#">Integer rutrum nisl in mi</a></li>
+                                <li><a href="#">Etiam malesuada rutrum enim</a></li>
+                                <li><a href="#">Aenean elementum facilisis</a></li>
+                                <li><a href="#">Sed quis odio sagittis leo</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="sidebar" class="two-cols">
+                <div class="col-one">
+                    <div class="box-blue">
+                        <h2 class="section"><b>Categorías</b></h2>
+                        <div id="colone" class="content">
+                            <ul>
+                                <li>
+                                <h3><a href="#">Pede vel arcu</a></h3>
+                                <ul>
+                                    <li><a href="#">Aliquet pretium</a></li>
+                                    <li><a href="#">Pellentesque qui</a></li>
+                                    <li><a href="#">Integer sit amet</a></li>
+                                    <li><a href="#">Elit non gravida</a></li>
+                                    <li><a href="#">Blandit </a><a href="#">lorem ipsum</a></li>
+                                    <li><a href="#">Dolor sit amet</a></li>
+                                </ul>
+                                </li>
+                                <li>
+                                <h3><a href="#">Adipiscing elit</a></h3>
+                                <ul>
+                                    <li><a href="#">Nec erat sit amet</a></li>
+                                    <li><a href="#">Pellentesque congue</a></li>
+                                    <li><a href="#">Cras vitae metus</a></li>
+                                    <li><a href="#">Risus pellentesque</a></li>
+                                    <li><a href="#">Maecenas vitae orci</a></li>
+                                    <li><a href="#">Vitae tellus feugiat</a></li>
+                                    <li><a href="#">Etiam ac tortor eu</a></li>
+                                </ul>
+                                </li>
+                                <li>
+                                <h3><a href="#">Metus euismod</a></h3>
+                                <ul>
+                                    <li><a href="#">Duis non ante in</a></li>
+                                    <li><a href="#">Commodo euismod</a></li>
+                                    <li><a href="#">Nec erat sit amet</a></li>
+                                    <li><a href="#">Pellentesque congue</a></li>
+                                    <li><a href="#">Risus pellentesque</a></li>
+                                    <li><a href="#">Maecenas vitae orci</a></li>
+                                    <li><a href="#">Vitae tellus eleifend</a></li>
+                                    <li><a href="#">Etiam ac tortor eu</a></li>
+                                </ul>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-two">
+                    <div id="col2" class="box-blue">
+                        <h2 class="section"><b>Publicidad</b></h2>
+                        <div class="content"><!--a href="#"-->
+                            <iframe id='ad1c52f0' name='ad1c52f0' src='http://delivery.pubads.biz/www/delivery/afr.php?zoneid=21&amp;cb=INSERT_RANDOM_NUMBER_HERE' frameborder='0' scrolling='no' width='160' height='600'></iframe>
+                            <!--img src="images/img20.jpg" alt="" width="160" height="600" /></a-->
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div style="clear: both;">&nbsp;</div>
+        </div>
+        <div id="footer">
+            <p id="legal">Copyright &copy; 2007 Simpletex. All Rights Reserved | Designed by <a href="http://www.freecsstemplates.org/">Free CSS Templates</a></p>
+            <p id="links"><a href="#">Privacy Policy</a> | <a href="#">Terms of Use</a> | <a href="http://validator.w3.org/check/referer" title="This page validates as XHTML 1.0 Transitional"><abbr title="eXtensible HyperText Markup Language">XHTML</abbr></a> | <a href="http://jigsaw.w3.org/css-validator/check/referer" title="This page validates as CSS"><abbr title="Cascading Style Sheets">CSS</abbr></a></p>
+        </div>
+    </body>
 </html>
