Changing the way the category portlets are called

--- a/cienciasalud/bluetheme/static/item.html
+++ b/cienciasalud/bluetheme/static/item.html
@@ -77,31 +77,22 @@ Description: A three-column, fixed-width template ideal for 1024x768 resolution.
                     <div class="box-blue">
                         <h2 class="section"><b>Categorías</b></h2>
                         <div id="colone" class="content">
-                            <ul>
-                                <li>
-                                <h3><a href="#">Pede vel arcu</a></h3>
-                                <ul>
-                                    <li><a href="#">Aliquet pretium</a></li>
-                                    <li><a href="#">Pellentesque qui</a></li>
-                                    <li><a href="#">Integer sit amet</a></li>
-                                    <li><a href="#">Elit non gravida</a></li>
-                                    <li><a href="#">Blandit </a><a href="#">lorem ipsum</a></li>
-                                    <li><a href="#">Dolor sit amet</a></li>
-                                </ul>
-                                </li>
-                                <li>
-                                <h3><a href="#">Adipiscing elit</a></h3>
-                                <ul>
-                                    <li><a href="#">Nec erat sit amet</a></li>
-                                    <li><a href="#">Pellentesque congue</a></li>
-                                    <li><a href="#">Cras vitae metus</a></li>
-                                    <li><a href="#">Risus pellentesque</a></li>
-                                    <li><a href="#">Maecenas vitae orci</a></li>
-                                    <li><a href="#">Vitae tellus feugiat</a></li>
-                                    <li><a href="#">Etiam ac tortor eu</a></li>
-                                </ul>
-                                </li>
-                            </ul>
+                            <div id="enfer">
+                                <img src="images/enfermedades.png" class="image-left" alt="Enfermedades" width="32" height="32" />
+                                <h2>Enfermedades</h2>
+                            </div>
+                            <div id="medpr">
+                                <img src="images/preventiva.png" class="image-left" alt="Medicina preventiva" width="32" height="32" />
+                                <h2>Medicina preventiva</h2>
+                            </div>
+                            <div id="medna">
+                                <img src="images/natural.png" class="image-left" alt="Medicina preventiva" width="32" height="32" />
+                                <h2>Medicina natural</h2>
+                            </div>
+                            <div id="perso">
+                                <img src="images/personalidad.png" class="image-left" alt="Grandes personalidades de la medicina" width="32" height="32" />
+                                <h2>Grandes personalidades de la medicina</h2>
+                            </div>
                         </div>
                     </div>
                     <div class="box-blue">
