--- a/cienciasalud/bluetheme/static/listing.html
+++ b/cienciasalud/bluetheme/static/listing.html
@@ -76,20 +76,20 @@ Description: A three-column, fixed-width template ideal for 1024x768 resolution.
                         <h2 class="section"><b>Categorías</b></h2>
                         <div id="colone" class="content">
                             <div id="enfer">
-                                <img src="images/enfermedades.png" class="image-left" alt="Enfermedades" width="32" height="32" />
-                                <h2>Enfermedades</h2>
+                                <h2><img src="images/enfermedades.png" class="image-left" alt="Enfermedades" width="32" height="32" />
+                                Enfermedades</h2>
                             </div>
                             <div id="medpr">
-                                <img src="images/preventiva.png" class="image-left" alt="Medicina preventiva" width="32" height="32" />
-                                <h2>Medicina preventiva</h2>
+                                <h2><img src="images/preventiva.png" class="image-left" alt="Medicina preventiva" width="32" height="32" />
+                                Medicina preventiva</h2>
                             </div>
                             <div id="medna">
-                                <img src="images/natural.png" class="image-left" alt="Medicina preventiva" width="32" height="32" />
-                                <h2>Medicina natural</h2>
+                                <h2><img src="images/natural.png" class="image-left" alt="Medicina preventiva" width="32" height="32" />
+                                Medicina natural</h2>
                             </div>
                             <div id="perso">
-                                <img src="images/personalidad.png" class="image-left" alt="Grandes personalidades de la medicina" width="32" height="32" />
-                                <h2>Grandes personalidades de la medicina</h2>
+                                <h2><img src="images/personalidad.png" class="image-left" alt="Grandes personalidades de la medicina" width="32" height="32" />
+                                Grandes personalidades de la medicina</h2>
                             </div>
                         </div>
                     </div>
