--- a/cienciasalud/bluetheme/static/listing.html
+++ b/cienciasalud/bluetheme/static/listing.html
@@ -77,19 +77,19 @@ Description: A three-column, fixed-width template ideal for 1024x768 resolution.
                         <div id="colone" class="content">
                             <div id="enfer">
                                 <h2><img src="images/enfermedades.png" class="image-left" alt="Enfermedades" width="32" height="32" />
-                                Enfermedades</h2>
+                                    <span>Enfermedades</span></h2>
                             </div>
                             <div id="medpr">
                                 <h2><img src="images/preventiva.png" class="image-left" alt="Medicina preventiva" width="32" height="32" />
-                                Medicina preventiva</h2>
+                                    <span>Medicina preventiva</span></h2>
                             </div>
                             <div id="medna">
                                 <h2><img src="images/natural.png" class="image-left" alt="Medicina preventiva" width="32" height="32" />
-                                Medicina natural</h2>
+                                <span>Medicina natural</span></h2>
                             </div>
                             <div id="perso">
                                 <h2><img src="images/personalidad.png" class="image-left" alt="Grandes personalidades de la medicina" width="32" height="32" />
-                                Grandes personalidades de la medicina</h2>
+                                <span>Grandes personalidades de la medicina</span></h2>
                             </div>
                         </div>
                     </div>
