Made portlets in home.html comply with design

--- a/cienciasalud/bluetheme/static/home.html
+++ b/cienciasalud/bluetheme/static/home.html
@@ -54,7 +54,7 @@ Description: A three-column, fixed-width template ideal for 1024x768 resolution.
                 <span class="portlet">Date portlet here</span>
             </div>
         </div>
-        <div id="page">
+        <div id="page" class="home">
             <div id="content">
                 <div id="feature" class="box-blue">
                     <h2 class="section"><b>Artículos recientes</b></h2>
