--- a/cienciasalud/bluetheme/static/noads.html
+++ b/cienciasalud/bluetheme/static/noads.html
@@ -58,7 +58,7 @@ Description: A three-column, fixed-width template ideal for 1024x768 resolution.
             <div id="content" class="widest">
                 <div class="box-blue col-one">
                     <h2 id="title" class="section"><b>Lorem Ipsum Dolor</b></h2>
-                    <div id="description">A summary here.</div>
+                    <div id="description"></div>
                     <div id="list-content" class="content">
                         <p>Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum. Dolor dictum integer nisl risus, sagittis convallis, rutrum id, congue, and nibh lorem ipsum dolor sit amet.</p>
                         <p> Augue praesent a lacus at urna congue rutrum. Dolor dictum integer nisl risus. <a href="#">Read more&hellip;</a></p>
