--- a/cienciasalud/bluetheme/static/home.html
+++ b/cienciasalud/bluetheme/static/home.html
@@ -27,7 +27,8 @@ Description: A three-column, fixed-width template ideal for 1024x768 resolution.
         <div id="header">
             <div id="logo">
                 <a href="">
-                    <img width="308" height="66" title="" alt="" src="images/logo.png"></a>
+                    <img width="308" height="66" title="" alt="" src="images/logo.png">
+                </a>
             </div>
             <div id="search">
                 <form method="get" action="">
@@ -53,46 +54,12 @@ Description: A three-column, fixed-width template ideal for 1024x768 resolution.
             </div>
         </div>
         <div id="page" class="home">
-            <div id="content">
-                <div id="feature" class="box-blue">
-                    <h2 class="section"><b>Artículos recientes</b></h2>
-                    <div class="content"> <img src="images/img12.jpg" alt="" width="160" height="160" class="right" />
-                        <h1>Welcome to Our Website!</h1>
-                        <p class="byline"><small>By John Doe</small></p>
-                        <p>Baseline is a free template from Free CSS Templates released under a Creative Commons Attribution 2.5 License. The photo is from PDPhoto.org. You"re free to use it for both commercial or personal use. I only ask that you link back to my site in some way. Enjoy :)</p>
-                        <p><a href="#"><strong>Get more free CSS templates&hellip;</strong></a></p>
-                    </div>
-                </div>
-                <div id="contents" class="two-cols">
-                    <div class="box-blue col-one">
-                        <h2 class="section"><b>Lorem Ipsum Dolor</b></h2>
-                        <div class="content">
-                            <p>Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum. Dolor dictum integer nisl risus, sagittis convallis, rutrum id, congue, and nibh lorem ipsum dolor sit amet.</p>
-                            <p> Augue praesent a lacus at urna congue rutrum. Dolor dictum integer nisl risus. <a href="#">Read more&hellip;</a></p>
-                        </div>
-                    </div>
-                    <div class="box-blue col-two">
-                        <h2 class="section"><b>Pellentesque Quis</b></h2>
-                        <div class="content">
-                            <ul class="list">
-                                <li><a href="#">Ut semper vestibulum est</a></li>
-                                <li><a href="#">Vestibulum luctus venenatis</a></li>
-                                <li><a href="#">Integer rutrum nisl in mi</a></li>
-                                <li><a href="#">Vestibulum luctus venenatis</a></li>
-                                <li><a href="#">Etiam malesuada rutrum enim</a></li>
-                                <li><a href="#">Aenean elementum facilisis</a></li>
-                                <li><a href="#">Ut tincidunt elit vitae augue</a></li>
-                                <li><a href="#">Integer rutrum nisl in mi</a></li>
-                                <li><a href="#">Etiam malesuada rutrum enim</a></li>
-                                <li><a href="#">Aenean elementum facilisis</a></li>
-                                <li><a href="#">Sed quis odio sagittis leo</a></li>
-                            </ul>
-                        </div>
-                    </div>
+            <div id="content" class="wide">
+                <div class="main-content">
                 </div>
             </div>
-            <div id="sidebar" class="two-cols">
-                <div class="col-one">
+            <div id="sidebar" class="two-cols wide">
+                <div class="col-one wide">
                     <div class="box-blue">
                         <h2 class="section"><b>Categorías</b></h2>
                         <div id="colone" class="content">
@@ -112,15 +79,6 @@ Description: A three-column, fixed-width template ideal for 1024x768 resolution.
                                 <h2>
                                     <span>Grandes personalidades de la medicina</span></h2>
                             </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-two">
-                    <div id="col2" class="box-blue">
-                        <h2 class="section"><b>Publicidad</b></h2>
-                        <div class="content"><!--a href="#"-->
-                            <iframe id='ad1c52f0' name='ad1c52f0' src='http://delivery.pubads.biz/www/delivery/afr.php?zoneid=21&amp;cb=INSERT_RANDOM_NUMBER_HERE' frameborder='0' scrolling='no' width='160' height='600'></iframe>
-                            <!--img src="images/img20.jpg" alt="" width="160" height="600" /></a-->
                         </div>
                     </div>
                 </div>
