--- a/cienciasalud/bluetheme/static/listing.html
+++ b/cienciasalud/bluetheme/static/listing.html
@@ -21,8 +21,17 @@ Description: A three-column, fixed-width template ideal for 1024x768 resolution.
     </head>
     <body>
         <div id="leaderboard">
-            <iframe id='a0d5ed6a' name='a0d5ed6a' src='http://delivery.pubads.biz/www/delivery/afr.php?zoneid=12&amp;cb=INSERT_RANDOM_NUMBER_HERE' frameborder='0' scrolling='no' width='728' height='90'></iframe>
-            <!--img src="images/leaderboard_728x90.gif" /-->
+            <script type="text/javascript"><!--
+            google_ad_client = "ca-pub-0356538532911936";
+            /* leaderboard */
+            google_ad_slot = "1142748652";
+            google_ad_width = 728;
+            google_ad_height = 90;
+            //-->
+            </script>
+            <script type="text/javascript"
+            src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+            </script>
         </div>
         <div id="header">
             <div id="logo">
